# obvs

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  .venv  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  constraints.txt  main.yaml
benchmarking/: custom_timeit.py  nnsight_benchmark.py  pytorch_benchmark.py  pytorch_compile_benchmark.py  run_benchmarks.py  transformerlens_benchmark.py
data/processed/: gpt2_jum_henson.pt
docs/: conf.py  detect_secrets.md  getting_started.md  index.rst  release_process.md  requirements.txt
docs/_build/doctrees/: detect_secrets.doctree  environment.pickle  getting_started.doctree  index.doctree  project_specific_setup.doctree  quickstart.doctree  release_process.doctree  updating_requirements.doctree  using_poetry.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/html/: .buildinfo  objects.inv  searchindex.js
docs/_build/html/_sources/: index.rst.txt  project_specific_setup.md.txt  using_poetry.md.txt
modal_images/: gemma.py  mistral.py  token_identity.py  token_identity_simple.py
obvs/: __init__.py  gputest.🔥  lenses.py  logging.py  metrics.py  patchscope.py  patchscope_base.py  vis.py
obvspython/: gputest.py  lenses.py  logging.py  patchscope.py  patchscope_base.py  patchscopes.py  patchscopes_base.py  utils.py  vis.py
patchscopes_compare/: patchscopes_basic.mojo  patchscopes_basic_transformerlens.py
scripts/: activation_patching_ioi.py  future_lens.py  generate_next_token_prediction_data.py  mistralai-Mistral-7B-v0.1_USA_surprisal_token_identity_32x32.npy  prep_next_token_prediction.py  replicate_figure_2.py  reproduce_logitlens_results.py  runs.sh  test_logit_lens_surprisal.py  test_logit_lenses.py  token_identity.py  token_identity_model_2_model.py  token_identity_prompts.py  token_identity_simple.py
tests/: conftest.py  test_blah.py  test_metrics.py  test_obvs.py  test_patchscopes.py  test_patchscopes_high_level.py  test_token_identity.py
tutorials/: Introduction.ipynb  Notes - Streamlit Tutorial.ipynb  deprecated Notes - Streamlit Tutorial.ipynb  patchscopes_streamlit.py  tutorials.md
(+15 files in other folders)
