###########
# 📜 Poetry
###########
[tool.poetry]
name = "obvs"
version = "0.1.0"
description = "Making Transformers Obvious"
authors = ["Jamie Coombes <jamie@example.com>"]
license = "UNLICENSED"
classifiers = ["Private :: Do Not Upload"]
packages = [
  # { include = "obvs" },
  { include = "obvspython" },
  # Add more packages here, e.g.
  # { include = "module_name", from = "obvs" },
]

[tool.poetry.dependencies]
python = "^3.11.7"
# Everything below here is alphabetically sorted
ipykernel = "^6.28.0"
torch = "^2.1.2"
torchvision = "^0.16.2"
transformers = "^4.37.1"
nnsight = "^0.1.17"
tiktoken = "^0.5.2"
plotly = "^5.18.0"

[tool.poetry.dev-dependencies]
# Everything below here is alphabetically sorted
bandit = "^1.7.5"
black = "^23.3.0"
detect-secrets = "1.2.0"
flake8 = "5.0.4"
flake8-bugbear = "^23.3.12"
flake8-comprehensions = "^3.12.0"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.4.0"
flake8-fixme = "^1.1.1"
flake8-implicit-str-concat = "^0.4.0"
flake8-mutable = "^1.2.0"
flake8-no-pep420 = "^2.4.0"
flake8-print = "^5.0.0"
flake8-return = "^1.2.0"
flake8-simplify = "^0.20.0"
ipdb = "^0.13.13"
isort = "^5.12.0"
jupyter-black = "^0.3.4"
pip-audit = "^2.5.5"
pre-commit = "^3.3.2"
pylint = "^2.17.4"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
pyinstrument = "^4.6.2"
scalene = "^1.5.34"
huggingface-hub = {extras = ["cli"], version = "^0.20.3"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

############
# ✅ Linters
############
[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
default_section = "THIRDPARTY"
known_first_party = ["obvs"]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
add_imports = "from __future__ import annotations"

[tool.pylint.MASTER]
ignore-paths = [".git"]
load-plugins = []

[tool.pylint."MESSAGES CONTROL"]
enable = "all"
max-module-lines = 2000
max-line-length = 100
max-locals = 50
min-similarity-lines = 150
max-statements = 89
max-args = 22
max-branches = 17
# good-names = []
# disable = []
logging-format-style = "new"

##############
# 📣 Towncrier
##############
